fix: enforce bidirectional task conflict checking in distribution engine